k8s/frontend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: frontend
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: frontend
          image: kpsarakis/universalis-demo-frontend:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 5000
