k8s/worker-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: universalis-worker-cluster-ip-service
spec:
  type: NodePort
  selector:
    component: worker
  ports:
    - port: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: kpsarakis/universalis-worker:latest
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
            requests:
              memory: "500Mi"
              cpu: "0.5"
          ports:
            - containerPort: 8888
