k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
   nginx.ingress.kubernetes.io/proxy-body-size: 256m
   nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
   nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
spec:
 rules:
   - http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: frontend-cluster-ip-service
              port:
                number: 5000
